[gd_scene load_steps=6 format=3 uid="uid://balxsjpwle5wq"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_owmpw"]
[ext_resource type="TileSet" uid="uid://irwh80stj4ys" path="res://tres/World.tres" id="2_s0g1d"]
[ext_resource type="PackedScene" uid="uid://cci24oag33sfq" path="res://scenes/player.tscn" id="4_k0gef"]
[ext_resource type="PackedScene" uid="uid://c4vjquan70cis" path="res://scenes/hud.tscn" id="4_powsm"]
[ext_resource type="Script" path="res://scripts/cameraFollow.gd" id="5_o3vnr"]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_owmpw")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_s0g1d")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(0, 131074, 1, 65536, 131074, 1, 131072, 327682, 0, 196608, 65538, 2, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1, 131074, 1, 65537, 131074, 1, 131073, 131074, 1, 196609, 131074, 2, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 917505, 1, 0, 983041, 1, 0, 1048577, 1, 0, 2, 262146, 1, 65538, 131074, 1, 131074, 131074, 1, 196610, 327682, 0, 262146, 65538, 2, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 851970, 1, 0, 917506, 1, 0, 983042, 1, 0, 1048578, 1, 0, 3, 196610, 0, 65539, 196610, 1, 131075, 262146, 1, 196611, 131074, 1, 262147, 327682, 0, 327683, 65538, 2, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 917507, 1, 0, 983043, 1, 0, 1048579, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 196610, 0, 196612, 262146, 1, 262148, 131074, 1, 327684, 327682, 0, 393220, 65538, 1, 458756, 65538, 2, 524292, 1, 0, 589828, 1, 0, 655364, 1, 0, 720900, 1, 0, 786436, 1, 0, 851972, 1, 0, 917508, 1, 0, 983044, 1, 0, 1048580, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 131074, 0, 262149, 131074, 1, 327685, 131074, 1, 393221, 131074, 1, 458757, 131074, 2, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 917509, 1, 0, 983045, 1, 0, 1048581, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 196610, 0, 262150, 262146, 1, 327686, 131074, 1, 393222, 131074, 1, 458758, 131074, 2, 524294, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 851974, 1, 0, 917510, 1, 0, 983046, 1, 0, 1048582, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 196610, 0, 327687, 262146, 1, 393223, 131074, 1, 458759, 131074, 2, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 917511, 1, 0, 983047, 1, 0, 1048583, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 131074, 0, 393224, 131074, 1, 458760, 327682, 0, 524296, 65538, 2, 589832, 1, 0, 655368, 1, 0, 720904, 1, 0, 786440, 1, 0, 851976, 1, 0, 917512, 1, 0, 983048, 1, 0, 1048584, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 131074, 0, 393225, 131074, 1, 458761, 131074, 1, 524297, 327682, 0, 589833, 65538, 2, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 917513, 1, 0, 983049, 1, 0, 1048585, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 196610, 0, 393226, 262146, 1, 458762, 131074, 1, 524298, 131074, 1, 589834, 131074, 2, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 851978, 1, 0, 917514, 1, 0, 983050, 1, 0, 1048586, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 131074, 0, 458763, 131074, 1, 524299, 131074, 1, 589835, 131074, 2, 655371, 1, 0, 720907, 1, 0, 786443, 1, 0, 851979, 1, 0, 917515, 1, 0, 983051, 1, 0, 1048587, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 131074, 0, 458764, 131074, 1, 524300, 131074, 1, 589836, 131074, 2, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 851980, 1, 0, 917516, 1, 0, 983052, 1, 0, 1048588, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 131074, 0, 458765, 131074, 1, 524301, 131074, 1, 589837, 131074, 2, 655373, 1, 0, 720909, 1, 0, 786445, 1, 0, 851981, 1, 0, 917517, 1, 0, 983053, 1, 0, 1048589, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 131074, 0, 458766, 131074, 1, 524302, 131074, 1, 589838, 131074, 2, 655374, 1, 0, 720910, 1, 0, 786446, 1, 0, 851982, 1, 0, 917518, 1, 0, 983054, 1, 0, 1048590, 1, 0, 15, 1, 0, 65551, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 65538, 0, 393231, 327682, 1, 458767, 131074, 1, 524303, 131074, 1, 589839, 131074, 2, 655375, 1, 0, 720911, 1, 0, 786447, 1, 0, 851983, 1, 0, 917519, 1, 0, 983055, 1, 0, 1048591, 1, 0, 16, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 65538, 0, 327696, 327682, 1, 393232, 131074, 1, 458768, 131074, 1, 524304, 131074, 1, 589840, 131074, 2, 655376, 1, 0, 720912, 1, 0, 786448, 1, 0, 851984, 1, 0, 917520, 1, 0, 983056, 1, 0, 1048592, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 131074, 0, 327697, 131074, 1, 393233, 131074, 1, 458769, 131074, 1, 524305, 131074, 1, 589841, 131074, 2, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 917521, 1, 0, 983057, 1, 0, 1048593, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 196610, 0, 327698, 262146, 1, 393234, 131074, 1, 458770, 131074, 1, 524306, 131074, 1, 589842, 131074, 2, 655378, 1, 0, 720914, 1, 0, 786450, 1, 0, 851986, 1, 0, 917522, 1, 0, 983058, 1, 0, 1048594, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 196610, 0, 393235, 262146, 1, 458771, 131074, 1, 524307, 131074, 1, 589843, 131074, 2, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 917523, 1, 0, 983059, 1, 0, 1048595, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 131074, 0, 458772, 131074, 1, 524308, 131074, 1, 589844, 131074, 2, 655380, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 917524, 1, 0, 983060, 1, 0, 1048596, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 131074, 0, 458773, 131074, 1, 524309, 131074, 1, 589845, 131074, 2, 655381, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 917525, 1, 0, 983061, 1, 0, 1048597, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 327702, 1, 0, 393238, 131074, 0, 458774, 131074, 1, 524310, 131074, 1, 589846, 131074, 2, 655382, 1, 0, 720918, 1, 0, 786454, 1, 0, 851990, 1, 0, 917526, 1, 0, 983062, 1, 0, 1048598, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 1, 0, 393239, 131074, 0, 458775, 131074, 1, 524311, 131074, 1, 589847, 327682, 0, 655383, 65538, 2, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 917527, 1, 0, 983063, 1, 0, 1048599, 1, 0, 24, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 1, 0, 393240, 196610, 0, 458776, 262146, 1, 524312, 131074, 1, 589848, 131074, 1, 655384, 327682, 0, 720920, 65538, 1, 786456, 65538, 1, 851992, 65538, 1, 917528, 65538, 1, 983064, 65538, 1, 1048600, 65538, 2, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 1, 0, 393241, 1, 0, 458777, 196610, 0, 524313, 262146, 1, 589849, 131074, 1, 655385, 131074, 1, 720921, 131074, 1, 786457, 131074, 1, 851993, 131074, 1, 917529, 131074, 1, 983065, 131074, 1, 1048601, 327682, 0, 26, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 1, 0, 393242, 1, 0, 458778, 1, 0, 524314, 131074, 0, 589850, 131074, 1, 655386, 131074, 1, 720922, 131074, 1, 786458, 131074, 1, 851994, 131074, 1, 917530, 131074, 1, 983066, 131074, 1, 1048602, 131074, 1, 27, 1, 0, 65563, 1, 0, 131099, 1, 0, 196635, 1, 0, 262171, 1, 0, 327707, 1, 0, 393243, 1, 0, 458779, 1, 0, 524315, 131074, 0, 589851, 131074, 1, 655387, 131074, 1, 720923, 131074, 1, 786459, 131074, 1, 851995, 131074, 1, 917531, 131074, 1, 983067, 131074, 1, 1048603, 131074, 1, 28, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 1, 0, 458780, 1, 0, 524316, 196610, 0, 589852, 196610, 1, 655388, 196610, 1, 720924, 196610, 1, 786460, 196610, 1, 851996, 196610, 1, 917532, 196610, 1, 983068, 262146, 1, 1048604, 131074, 1, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 196637, 1, 0, 262173, 1, 0, 327709, 1, 0, 393245, 1, 0, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, 851997, 1, 0, 917533, 1, 0, 983069, 196610, 0, 1048605, 262146, 1)
layer_1/name = "montains"
layer_1/tile_data = PackedInt32Array(262173, 131074, 6, 262172, 131074, 6, 262171, 131074, 6, 262170, 131074, 6, 262169, 131074, 6, 262167, 131074, 6, 262168, 131074, 6, 262166, 131074, 6, 262165, 131074, 6, 262164, 65538, 6, 196628, 65538, 5, 196637, 131074, 5, 131101, 131074, 5, 65565, 131074, 5, 29, 131074, 5, 196636, 131074, 5, 131100, 131074, 5, 65564, 131074, 5, 28, 131074, 5, 27, 131074, 5, 26, 131074, 5, 25, 131074, 5, 24, 131074, 5, 23, 131074, 5, 22, 131074, 5, 65558, 131074, 5, 65557, 131074, 5, 21, 131074, 5, 196629, 131074, 5, 196630, 131074, 5, 131095, 131074, 5, 65559, 131074, 5, 65560, 131074, 5, 131096, 131074, 5, 196631, 131074, 5, 196632, 131074, 5, 196633, 131074, 5, 131097, 131074, 5, 65561, 131074, 5, 65562, 131074, 5, 65563, 131074, 5, 131099, 131074, 5, 196634, 131074, 5, 196635, 131074, 5, 131098, 131074, 5, 131090, 131074, 6, 131089, 131074, 6, 131088, 131074, 6, 131087, 131074, 6, 131086, 65538, 6, 65550, 327682, 4, 65549, 65538, 6, 13, 65538, 5, 14, 131074, 5, 15, 131074, 5, 16, 131074, 5, 17, 131074, 5, 18, 131074, 5, 19, 131074, 5, 20, 131074, 5, 65556, 131074, 5, 65555, 131074, 5, 65554, 131074, 5, 65553, 131074, 5, 65552, 131074, 5, 65551, 131074, 5, 1048580, 196610, 5, 983044, 196610, 5, 917508, 196610, 5, 851972, 196610, 5, 786436, 196610, 5, 720900, 196610, 4, 720899, 131074, 4, 720898, 131074, 4, 720897, 131074, 4, 720896, 131074, 4, 786435, 131074, 5, 786434, 131074, 5, 786433, 131074, 5, 786432, 131074, 5, 851968, 131074, 5, 917504, 131074, 5, 983040, 131074, 5, 1048576, 131074, 5, 983041, 131074, 5, 1048577, 131074, 5, 917505, 131074, 5, 851969, 131074, 5, 851970, 131074, 5, 851971, 131074, 5, 917507, 131074, 5, 983043, 131074, 5, 1048579, 131074, 5, 983042, 131074, 5, 917506, 131074, 5, 1048578, 131074, 5, 131094, 131074, 5, 131093, 131074, 5, 131092, 327682, 4, 131091, 131074, 6)
layer_2/name = "objects"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(983042, 524291, 6, 917514, 524291, 6, 983056, 393219, 7, 786452, 393219, 7, 22, 393219, 7, 131100, 393219, 7, 65561, 655363, 7, 524289, 655363, 7, 655367, 655363, 7, 786433, 655363, 7, 917527, 655363, 7, 458780, 655363, 7, 589835, 3, 5, 262145, 3, 5, 589842, 3, 5, 65546, 3, 5, 851982, 393219, 7, 8, 524291, 6, 917512, 655363, 7, 327692, 655363, 7, 27, 327683, 0, 28, 327683, 0, 29, 327683, 0, 655369, 3, 1, 65557, 3, 1, 20, 3, 1, 983058, 3, 1, 851980, 3, 1, 917504, 3, 1, 851971, 3, 1, 458778, 3, 0, 196615, 3, 0, 18, 3, 5, 655374, 655363, 7, 5, 524291, 6)

[node name="player" parent="." instance=ExtResource("4_k0gef")]
position = Vector2(272, 120)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(0, 48, 0, 272, 400, 272, 400, 288, 496, 288, 496, 256, 480, 256, 480, 0, 24, 0, 24, -16, -16, -16, -16, 40, -28, 58, -24, -40, 88, -64, 208, -72, 368, -64, 520, -32, 536, 0, 536, 96, 528, 160, 528, 240, 536, 296, 472, 328, 296, 312, 152, 304, 16, 312, -48, 304, -48, 224, -48, 168, -48, 96, -32, 64, -16, 40, -16, 48)

[node name="cliffSideTransitionPoint" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cliffSideTransitionPoint"]
polygon = PackedVector2Array(0, 48, 0, 0, 24, 0, 24, -16, -16, -16, -16, 48)

[node name="cliffSide2TransitionPoint" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cliffSide2TransitionPoint"]
polygon = PackedVector2Array(480, 256, 480, 272, 400, 272, 400, 288, 496, 288, 496, 256)

[node name="HUD" parent="." instance=ExtResource("4_powsm")]

[node name="WorldCamera" type="Camera2D" parent="."]
position = Vector2(272, 120)
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 272
script = ExtResource("5_o3vnr")

[connection signal="body_entered" from="cliffSideTransitionPoint" to="." method="_on_cliff_side_transition_point_body_entered"]
[connection signal="body_exited" from="cliffSideTransitionPoint" to="." method="_on_cliff_side_transition_point_body_exited"]
[connection signal="body_entered" from="cliffSide2TransitionPoint" to="." method="_on_cliff_side_2_transition_point_body_entered"]
[connection signal="body_exited" from="cliffSide2TransitionPoint" to="." method="_on_cliff_side_2_transition_point_body_exited"]
